[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets_menu/PixeloidMono-1G8ae.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/transition_out.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/transition_in.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets_menu/capa.png" type="Texture" id=4]
[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="Theme" id=7]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/styles/disabled = SubResource( 8 )
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 10 )
Button/styles/normal = SubResource( 11 )
Button/styles/pressed = SubResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="transition_in" parent="." instance=ExtResource( 3 )]
visible = false

[node name="transition_out" parent="." instance=ExtResource( 2 )]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 65.0
margin_right = 48.0
margin_bottom = 120.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="btn_start" type="Button" parent="VBoxContainer"]
margin_right = 48.0
margin_bottom = 11.0
focus_neighbour_top = NodePath("../btn_quit")
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.376471, 0.682353, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.811765, 0.556863, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.905882, 0.611765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="btn_tutorial" type="Button" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 48.0
margin_bottom = 26.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.376471, 0.682353, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.811765, 0.556863, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.905882, 0.611765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tutorial"
flat = true
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="btn_about" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 48.0
margin_bottom = 41.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.376471, 0.682353, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.811765, 0.556863, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.905882, 0.611765, 1 )
custom_fonts/font = SubResource( 1 )
text = "About"
flat = true
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="btn_quit" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 48.0
margin_bottom = 56.0
focus_neighbour_bottom = NodePath("../btn_start")
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.376471, 0.682353, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.811765, 0.556863, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.905882, 0.611765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
align = 0
icon_align = 2
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_tutorial" to="." method="_on_btn_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_about" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
